# media-polarity-and-tension

./: .gitignore  README.md  architecture.txt  main.py  pyproject.toml  rss_feeds_en.md  rss_feeds_fr.md  run_pipeline.py  run_pipeline_en.sh  run_pipeline_fr.sh
data/: feed_data_pol.json  lexicons.json  test_feed_data.json  test_feed_data_2.json
notebooks/: explo.py  spacy_nb.py
notebooks/__marimo__/session/: explo.py.json  spacy_nb.py.json
prompts/: prompts.txt
scripts/: convert_emolex_to_json.py  run_pipeline_en.py  run_pipeline_fr.py
src/features/: lexicon.py  ner.py  try_berttopic.py  try_framing_gap.py  try_spacy.py  try_spacy_depparser.py  try_transformers.py
src/ingestion/: feeds.py  process.py
